# automation_network-_management

./: README.md  pyproject.toml  test_data.py  testik.py
app/: .env  logger.py  main.py
app/config/: base.py  device_config.py  driver.py
app/dependencies/: configurations_device.py  tools.py
app/enums/: commands.py  configurations.py  objects.py
app/models/: interfaces.py  routing.py  vlan.py
app/routers/: __init__.py  index.py  router.py
app/routers/api_schemas/: base.py  configuration.py
app/templates/: configure.html  device.html  index.html
app/templates_device/configure_config/: base.j2  hostname.j2  interfaces.j2  routing.j2  vlan.j2
app/templates_device/parse_config/: all  hostname  interfaces
app/ui_stub/: __init__.py  index.py  router.py
