[tool.poetry]
name = "automation-network-management"
version = "0.1.0"
description = ""
authors = ["Olya Nikiforova <olyanikiforova1313@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
ipaddress = "^1.0.23"


[tool.poetry.group.device.dependencies]
scrapli = "^2024.1.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
